# lol-helper

./: index.html  package.json  tsconfig.json  uno.config.ts  vite.config.ts  vite.config.ts.timestamp-1726953844534-b0f17d6fc5d1e.mjs
doc/: room.km
doc/lol_client/: avatar.md  avatart.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/define/: mod.rs
src-tauri/src/http/: mod.rs
src-tauri/src/lcu_auth/: mod.rs
src-tauri/src/socket/: mod.rs
src/api/: cache.ts  client.ts  lcuApis.ts  lolSocket.ts
src/components/: Background.vue  Button.vue  ChampRoundBorder.vue  FormInput.vue  Image.vue  LolAvatar.vue  LolButton.vue  MSLoading.vue  RandomButton.vue  StatusBar.vue
src/composables/: useConnectLolClient.tsx
src/data/: config.ts
src/page/: Home.vue  Room.vue
src/page/component/: CreateRoom.vue  JoinRoom.vue
src/page/composable/room/: useChampions.ts  useUser.ts
src/pages/: Home.vue  Room.vue
src/pages/composable/room/: useChampions.ts  useUser.ts
src/plugin/: AwesomeIcon.ts
src/router/: index.ts
src/store/: useRoomStore.ts  useUserStore.ts
src/types/: LolApi.d.ts  TauriDirective.d.ts
src/utils/: tool.ts
