[package]
name = "lol-helper"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "^1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "clipboard-read-text", "clipboard-write-text", "dialog-all", "http-request", "shell-open",  "window-start-dragging", "window-set-position", "window-maximize", "window-minimize", "window-close"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
window-vibrancy = "0.4.3"
regex = "1.10.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
window-shadows = "0.2.2"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

